refactor: Use tilde notation, don't make assumptions about node_modules location
affects: ak-button-group, ak-dropdown

--- a/packages/ak-dropdown/src/shared-variables.less
+++ b/packages/ak-dropdown/src/shared-variables.less
@@ -1,7 +1,7 @@
 // For styles that are shared between shadow and host (variable definitions ONLY)
 
-@import '../node_modules/akutil-shared-styles/src/colors.less';
-@import '../node_modules/akutil-shared-styles/src/fonts.less';
+@import '~akutil-shared-styles/src/colors.less';
+@import '~akutil-shared-styles/src/fonts.less';
 
 @ak-dropdown-border-radius: 4px;
 @ak-dropdown-background-main: @ak-color-N700;
@@ -18,4 +18,3 @@
 @ak-dropdown-font-heading: @ak-color-N50;
 
 @ak-dropdown-font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-
