--- a/packages/ak-dropdown/src/shadow-list.less
+++ b/packages/ak-dropdown/src/shadow-list.less
@@ -6,6 +6,8 @@
 @import 'shared-variables.less';
 
 .list {
-  border-top-right-radius: @ak-dropdown-border-radius;
+  border-radius: @ak-dropdown-border-radius;
   max-width: 300px;
+  padding:4px 0;
+  background:@ak-dropdown-background-main;
 }
