fix(component): Hide the tab pane content when not selected, so there is no flicker when quickly cha
affects: ak-tabs

--- a/packages/ak-tabs/src/tab-shadow.less
+++ b/packages/ak-tabs/src/tab-shadow.less
@@ -3,4 +3,8 @@
 .ak-tab-pane {
   display: block;
   padding: @ak-tabs-margin (2 * @ak-tabs-margin);
+
+  &:not(.selected) {
+    display: none;
+  }
 }
