fix(component): Fix on container name overflow and container link overflow ellipsis
affects: ak-navigation

still WIP, need to fix multiline container name overflow

--- a/packages/ak-navigation/src/index.less
+++ b/packages/ak-navigation/src/index.less
@@ -5,11 +5,12 @@
 @ak-navigation-container-color: @ak-color-N20;
 @ak-navigation-container-name-color: @ak-color-N500;
 
-@global-bar-width: 60px;
 @global-primary-item-margin: 25px;
 @global-secondary-item-margin: 10px;
 @global-secondary-item-height: 30px;
 @container-logo-size: 40px;
+
+@font-size: 14px;
 
 .navigation {
   background-color: @ak-navigation-container-color;
@@ -56,6 +57,7 @@
   .container {
     padding: 20px 0;
     overflow: hidden;
+    width: 100%;
   }
 
   .container-logo {
@@ -74,10 +76,18 @@
     align-items: center;
     margin-bottom: 10px;
     font-weight: bold;
-    font-size: 14px;
+  }
+
+  .container-name-text {
+    width: @container-link-text-expanded-width;
+    font-size: @font-size;
+    line-height: @font-size;
+    max-height: @font-size * 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .container-links {
-    font-size: 14px;
+    font-size: @font-size;
   }
 }
