--- a/packages/ak-navigation/src/ak-navigation-link.less
+++ b/packages/ak-navigation/src/ak-navigation-link.less
@@ -19,8 +19,9 @@
 
 .icon {
   position: relative;
-  margin-left: 10px;
-  margin-right: 20px;
+  margin-left: @navigation-link-icon-margin-left;
+  margin-right: @navigation-link-icon-margin-right;
+  width: @navigation-link-icon-size;
   display: inline-block;
 }
 
@@ -29,6 +30,8 @@
   display: inline-block;
   vertical-align: text-bottom;
   overflow: hidden;
+  text-overflow: ellipsis;
+  width: @container-link-text-expanded-width;
 }
 
 .selected {
