--- a/packages/ak-editor-toolbar-block-type/src/index.less
+++ b/packages/ak-editor-toolbar-block-type/src/index.less
@@ -18,32 +18,32 @@
     display: block;
   }
 
-  [font=normal-text] {
+  [font-name=normal-text] {
     font-size: 14px;
     font-weight: normal;
     line-height: 20px;
   }
 
-  [font=heading1] {
+  [font-name=heading1] {
     font-size: 20px;
     font-weight: normal;
     line-height: 20px;
     letter-spacing: -0.01em;
   }
 
-  [font=heading2] {
+  [font-name=heading2] {
     font-size: 16px;
     font-weight: bold;
     line-height: 20px;
   }
 
-  [font=heading3] {
+  [font-name=heading3] {
     font-size: 14px;
     font-weight: bold;
     line-height: 20px;
   }
 
-  [font=monospace] {
+  [font-name=monospace] {
     font-family: monospace;
   }
 }
