--- a/packages/ak-text-field/src/shadow.less
+++ b/packages/ak-text-field/src/shadow.less
@@ -6,12 +6,12 @@
 @import 'shared-variables.less';
 
 .label {
+  color: @ak-color-N200;
   display: block;
   font-size: 12px;
-  color: @ak-color-N200;
-  padding-bottom: 10px;
   font-weight: 500;
   margin-top: 20px;
+  padding-bottom: 10px;
 }
 
 // NORMAL STATE
@@ -21,10 +21,9 @@
   border: 1px solid @ak-color-N30A;
   border-radius: 3px;
   font-size: 14px;
-  padding: 9px 8px 9px 8px;
-  padding: 13px 8px 13px 8px;
-  width: 300px;
+  padding: 13px 8px;
   transition: background-color 0.2s, border-color 0.2s;
+  width: 300px;
 };
 .default-slot-element > input { @baseInputStyle(); }
 ::content > input { @baseInputStyle(); }
@@ -33,8 +32,8 @@
 // HOVER STATE
 
 @hoverInputStyle: {
-  border-color: @ak-color-N20;
   background-color: @ak-color-N20;
+  border-color: @ak-color-N20;
 };
 .default-slot-element > input:hover { @hoverInputStyle(); }
 ::content > input:hover { @hoverInputStyle(); }
@@ -46,12 +45,7 @@
   background-color: white;
   border-width: 2px;
   border-color: @ak-color-B100;
-  box-shadow: none;
-  outline: none;
-  position: relative;
-  top: -1px;
-  left: -1px;
-  margin-bottom: -2px;
+  padding: 12px 7px;
 };
 .default-slot-element > input:focus { @focusInputStyle(); }
 ::content > input:focus { @focusInputStyle(); }
