--- a/packages/akutil-shared-styles/src/mixins/animations.less
+++ b/packages/akutil-shared-styles/src/mixins/animations.less
@@ -9,11 +9,11 @@
   @keyframes e(@animationName) {
     0% {
       .calculateKeyframe(@animatedProperties, 0);
-      easing: cubic-bezier(0.23830050393398, 0, 0.25586732616931, 0.79011192334632);
+      animation-timing-function: cubic-bezier(0.23830050393398, 0, 0.25586732616931, 0.79011192334632);
     }
     20% {
       .calculateKeyframe(@animatedProperties, 0.8);
-      easing: cubic-bezier(0.21787238302442, 0.98324004924648, 0.58694150667646, 1);
+      animation-timing-function: cubic-bezier(0.21787238302442, 0.98324004924648, 0.58694150667646, 1);
     }
     100% {
       .calculateKeyframe(@animatedProperties, 1);
@@ -25,15 +25,15 @@
   @keyframes e(@animationName) {
     0% {
       .calculateKeyframe(@animatedProperties, 0);
-      easing: cubic-bezier(0.33333333, 0, 0.4, 1);
+      animation-timing-function: cubic-bezier(0.33333333, 0, 0.4, 1);
     }
     20% {
       .calculateKeyframe(@animatedProperties, 1.05);
-      easing: cubic-bezier(0.4, 0, 0.6, 1);
+      animation-timing-function: cubic-bezier(0.4, 0, 0.6, 1);
     }
     76% {
       .calculateKeyframe(@animatedProperties, 0.975);
-      easing: cubic-bezier(0.4, 0, 0.6, 1);
+      animation-timing-function: cubic-bezier(0.4, 0, 0.6, 1);
     }
     100% {
       .calculateKeyframe(@animatedProperties, 1);
@@ -45,11 +45,11 @@
   @keyframes e(@animationName) {
     0% {
       .calculateKeyframe(@animatedProperties, 0);
-      easing: cubic-bezier(0.4, 0, 0.15, 1);
+      animation-timing-function: cubic-bezier(0.4, 0, 0.15, 1);
     }
     50% {
       .calculateKeyframe(@animatedProperties, 1.1);
-      easing: cubic-bezier(0.4, 0, 0.6, 1);
+      animation-timing-function: cubic-bezier(0.4, 0, 0.6, 1);
     }
     100% {
       .calculateKeyframe(@animatedProperties, 1);
