--- a/packages/ak-tooltip/src/shadow.less
+++ b/packages/ak-tooltip/src/shadow.less
@@ -1,6 +1,18 @@
 // These styles will be inserted into a style tag inside
 // the shadow dom of each instance of the component
 @import '~akutil-shared-styles/src/colors.less';
+@import '~akutil-shared-styles/src/mixins/animations.less';
+
+
+@fontSize: 12px;
+@fontColor: white;
+@maxWidth: 200px;
+@borderRadius: 5px;
+@marginDistance: 10px;
+@animationMovementDistance: 20;
+@animationDelay: 0.1s;
+@animationTime: @animationDelay + 1s;
+
 
 .hidden {
     border: 0;
@@ -17,12 +29,42 @@
   @leftAndRightPadding: 8px;
   @topAndBottomPadding: 4px; // (20px height - 12px font) / 2 to get the top
 
-  font-size: 12px;
-  border-radius: 5px;
+  font-size: @fontSize;
+  border-radius: @borderRadius;
   background-color: @ak-color-N900;
-  height: 20px;
+  height: 20px; // likely to be changed once we have multiline tooltips
   padding: @topAndBottomPadding @leftAndRightPadding;
-  max-width: 200px;
-  color: white;
-  margin: 10px;
+  max-width: @maxWidth;
+  color: @fontColor;
+  margin: @marginDistance;
+  pointer-events: none;
+}
+
+//************** Animations ***************//
+
+// define the props to transform for each animation
+@slideUp: 'transform', 'translateY(XXpx)', 20, 0;
+@slideDown: 'transform', 'translateY(XXpx)', -20, 0;
+@slideLeft: 'transform', 'translateX(XXpx)', 20, 0;
+@slideRight: 'transform', 'translateX(XXpx)', -20, 0;
+@fadeIn: 'opacity', 'XX', 0, 1;
+
+// then create the keyframes for each
+.createBoldAnimation(@slideUp @fadeIn, 'slide-up');
+.createBoldAnimation(@slideDown @fadeIn, 'slide-down');
+.createBoldAnimation(@slideLeft @fadeIn, 'slide-left');
+.createBoldAnimation(@slideRight @fadeIn, 'slide-right');
+
+// and create classes to apply them
+.slideUpAnimation {
+  animation: slide-up @animationTime @animationDelay backwards;
+}
+.slideDownAnimation {
+  animation: slide-down @animationTime @animationDelay backwards;
+}
+.slideLeftAnimation {
+  animation: slide-left @animationTime @animationDelay backwards;
+}
+.slideRightAnimation {
+  animation: slide-right @animationTime @animationDelay backwards;
 }
