refactor(component): Refactored tooltip to use `visible` prop rather than imperative .show and .hide
affects: ak-tooltip

--- a/packages/ak-tooltip/src/host.less
+++ b/packages/ak-tooltip/src/host.less
@@ -9,9 +9,10 @@
 // (because in storybook the component name is randomly generated)
 .ak-tooltip,
 ak-tooltip {
-  display: inline-block;
+  display: none;
+  pointer-events: none;
 
-  &:not([defined]) {
-    display: none;
+  &[visible] {
+    display: inline-block;
   }
 }
