--- a/packages/ak-tooltip/src/shadow.less
+++ b/packages/ak-tooltip/src/shadow.less
@@ -14,7 +14,8 @@
 @animationDelay: 0.1s;
 @animationTime: @animationDelay + 1s;
 
-
+// Putting these styles in host.less with :not([visible]) causes a slight flash when moving the
+// mouse in the direction of the animation. Putting it here makes it work perfectly.
 .hidden {
     border: 0;
     clip: rect(0 0 0 0);
@@ -43,10 +44,10 @@
 //************** Animations ***************//
 
 // define the props to transform for each animation
-@slideUp: 'transform', 'translateY(XXpx)', 20, 0;
-@slideDown: 'transform', 'translateY(XXpx)', -20, 0;
-@slideLeft: 'transform', 'translateX(XXpx)', 20, 0;
-@slideRight: 'transform', 'translateX(XXpx)', -20, 0;
+@slideUp: 'transform', 'translateY(XXpx)', @animationMovementDistance, 0;
+@slideDown: 'transform', 'translateY(XXpx)', -@animationMovementDistance, 0;
+@slideLeft: 'transform', 'translateX(XXpx)', @animationMovementDistance, 0;
+@slideRight: 'transform', 'translateX(XXpx)', -@animationMovementDistance, 0;
 @fadeIn: 'opacity', 'XX', 0, 1;
 
 // then create the keyframes for each
