feat: Add alignment attribute
affects: ak-tag-group

--- a/packages/ak-tag-group/src/shadow.less
+++ b/packages/ak-tag-group/src/shadow.less
@@ -13,6 +13,14 @@
   padding: @spacing;
 }
 
+.rightAligned {
+  transform-origin: right;
+}
+
+.leftAligned {
+  transform-origin: left;
+}
+
 .flex-item() {
   margin: @spacing;
 }
