--- a/packages/ak-tag/src/host.less
+++ b/packages/ak-tag/src/host.less
@@ -1,9 +1,3 @@
-// You can use element selectors here (e.g. whatever is exposed in index.js)
-// to style your web component light DOM.
-
-// Anything in here leaks to the rest of the page and nothing in here can affect things within
-// the shadow part of the component.
-
 @import 'shared-variables.less';
 
 // we define a class here in order to re-use it in the storybook
@@ -11,6 +5,7 @@
 .ak-tag,
 ak-tag {
   display: inline-block;
+  transform-origin: inherit;
 
   &:not([defined]) {
     display: none;
