fix: Make sure animation result stays
affects: ak-tag

--- a/packages/ak-tag/src/shadow.less
+++ b/packages/ak-tag/src/shadow.less
@@ -67,7 +67,7 @@
   }
 
   &.isRemoving {
-    animation: removeAnimation 250ms;
+    animation: removeAnimation 250ms forwards;
     transform-origin: inherit;
     will-change: transform;
     .text {
