fix: Use flexbox
affects: ak-tag, ak-tag-group

--- a/packages/ak-tag-group/src/host.less
+++ b/packages/ak-tag-group/src/host.less
@@ -10,7 +10,7 @@
 // (because in storybook the component name is randomly generated)
 .ak-tag-group,
 ak-tag-group {
-  display: inline-block;
+  display: flex;
 
   &:not([defined]) {
     display: none;
