--- a/packages/ak-editor-bitbucket/src/shadow.less
+++ b/packages/ak-editor-bitbucket/src/shadow.less
@@ -7,6 +7,13 @@
   [contenteditable] {
     outline: none;
     white-space: pre-wrap;
+
+    blockquote {
+      padding-left: 1em;
+      border-left: 3px solid #eee;
+      margin-left: 0;
+      margin-right: 0;
+    }
   }
 }
 
