feat(bitbucket): add placeholder prop

--- a/packages/ak-editor-bitbucket/src/shadow.less
+++ b/packages/ak-editor-bitbucket/src/shadow.less
@@ -24,6 +24,11 @@
   &.comment {
     height: 30px;
   }
+  &::placeholder {
+    font-size: 14px;
+    padding: 20px;
+    color: black;
+  }
 }
 
 .content {
