fix(component): blanket hides correctly
affects: ak-navigation

this will need an integration test later.

--- a/packages/ak-navigation/src/index.less
+++ b/packages/ak-navigation/src/index.less
@@ -12,6 +12,10 @@
 
 @font-size: 14px;
 
+.blanket:not(.blanket-active) {
+  display: none;
+}
+
 .navigation {
   background-color: @ak-navigation-container-color;
   top: 0;
