--- a/packages/ak-tag/src/host.less
+++ b/packages/ak-tag/src/host.less
@@ -4,8 +4,7 @@
 // (because in storybook the component name is randomly generated)
 .ak-tag,
 ak-tag {
-  flex: 0 1 auto;
-  transform-origin: inherit;
+  display: inline-block;
 
   &:not([defined]) {
     display: none;
