--- a/packages/ak-tag/src/shared-variables.less
+++ b/packages/ak-tag/src/shared-variables.less
@@ -2,3 +2,15 @@
 
 @import '~akutil-shared-styles/src/colors.less';
 @import '~akutil-shared-styles/src/fonts.less';
+
+@border-radius: 3px;
+@outline-width: 2px;
+@grid-unit: 10px;
+@max-height: 18px;
+@distance: 4px;
+@max-width: 200px;
+@max-text-width: @max-width - (2 * @distance);
+@button-width: @grid-unit + @border-radius;
+@font-size: 14px;
+@spacing: 6px;
+@animation-width: @max-width + (2 * @spacing);
