fix(component): refactor css so that dropdown position is calculated correctly
affects: ak-navigation

funny behaviour with having position: absolute / bottom: 0 set in the item.

--- a/packages/ak-navigation/src/index.less
+++ b/packages/ak-navigation/src/index.less
@@ -29,6 +29,7 @@
   }
 
   .global {
+    display: flex;
     flex: 0 0 @global-bar-width;
     background-color: @ak-navigation-global-color;
     color: white;
@@ -45,15 +46,14 @@
       }
     }
 
-    .global-secondary {
+    .global-secondary-item {
       margin: 10px auto;
       height: @global-secondary-item-height;
       text-align: center;
     }
 
     .global-bottom {
-      bottom: 0;
-      position: absolute;
+      margin-top: auto;
       width: 100%;
     }
   }
