feat: keyboard interactions & proto methods
affects: ak-tag

--- a/packages/ak-tag/src/shadow.less
+++ b/packages/ak-tag/src/shadow.less
@@ -1,10 +1,8 @@
-// These styles will be inserted into a style tag inside
-// the shadow dom of each instance of the component
-
-// Only do class selectors in here, anything else leaks to the rest of the page in
-// browsers that do not support shadow DOM
 @import 'shared-variables.less';
 @import '~akutil-shared-styles/src/mixins/animations.less';
+
+// Attention: The animation name removeAnimation is referenced in the JS AnimationWrapper
+.createBoldAnimation(@remove-animation, 'removeAnimation');
 
 .outline(@color) {
   &:focus {
@@ -15,10 +13,6 @@
 
 .nooutline() {
   box-shadow: none;
-}
-
-.rootNode {
-
 }
 
 .chrome {
@@ -41,6 +35,7 @@
       .nooutline();
     }
   }
+
   &.isLinked.markedForRemoval {
     background-color: @ak-color-R50;
 
@@ -64,7 +59,7 @@
 
 .animationWrapper {
   box-sizing: border-box;
-  //padding: @spacing;
+
   &.isRemoving {
     animation: removeAnimation 250ms forwards;
     will-change: width;
@@ -114,10 +109,8 @@
   height: 100%;
   width: @button-width;
   color: @ak-color-N500;
+
   &:hover {
     color: @ak-color-R500;
   }
 }
-
-@removeAnimation: 'max-width', 'XX', @animation-width, 0;
-.createBoldAnimation(@removeAnimation, 'removeAnimation');
