--- a/packages/ak-tag/src/shared-variables.less
+++ b/packages/ak-tag/src/shared-variables.less
@@ -14,3 +14,5 @@
 @font-size: 14px;
 @spacing: 6px;
 @animation-width: @max-width + (2 * @spacing);
+
+@remove-animation: 'max-width', 'XX', @animation-width, 0;
