test: add test for animation wrapper
affects: ak-tag

--- a/packages/ak-tag/src/shadow.less
+++ b/packages/ak-tag/src/shadow.less
@@ -61,7 +61,7 @@
   box-sizing: border-box;
 
   &.isRemoving {
-    animation: removeAnimation 250ms forwards;
+    animation: removeAnimation @animation-duration forwards;
     will-change: width;
 
     .chrome {
