--- a/packages/ak-tag/src/shared-variables.less
+++ b/packages/ak-tag/src/shared-variables.less
@@ -13,6 +13,7 @@
 @button-width: @grid-unit + @border-radius;
 @font-size: 14px;
 @spacing: 6px;
-@animation-width: @max-width + (2 * @spacing);
 
+@animation-width: @max-width + (2 * @spacing);
+@animation-duration: 250ms;
 @remove-animation: 'max-width', 'XX', @animation-width, 0;
