fix(component): fix styles
affects: ak-dropdown

--- a/packages/ak-dropdown/src/shadow-trigger.less
+++ b/packages/ak-dropdown/src/shadow-trigger.less
@@ -9,6 +9,8 @@
   border-radius: @ak-dropdown-border-radius;
   height: 30px;
   line-height: 30px;
+  font-size: 14px;
+  font-weight: normal;
 
   &:hover {
     background-color: @ak-color-N40;
