--- a/packages/ak-dropdown/src/shadow-item.less
+++ b/packages/ak-dropdown/src/shadow-item.less
@@ -32,6 +32,9 @@
   background-color: @ak-dropdown-background-main;
   text-decoration: none;
   height:30px;
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: normal;
 
   .flex;
   & > * {
