--- a/packages/ak-editor-toolbar-block-type/src/block-type-select.less
+++ b/packages/ak-editor-toolbar-block-type/src/block-type-select.less
@@ -8,7 +8,7 @@
   // this should be inherited, but Chrome somehow doesn't do it properly
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
-  .font-select[active] & {
+  .block-type-select[active] & {
     color: white;
   }
 }
