fix(component): Bump to ak-dropdown 2.0.0 and only show hidden items in the dropdown
affects: ak-tabs

--- a/packages/ak-tabs/src/shadow.less
+++ b/packages/ak-tabs/src/shadow.less
@@ -72,26 +72,7 @@
   }
 }
 
-// Temporary. For dropdown placeholder.
-.dd-container {
-  list-style-type: none;
-  margin: 0;
-  position: absolute;
-  right: 0;
-  top: 40px;
-
-  .dd-item {
-    border: 1px solid black;
-    margin: 0;
-    padding: 5px;
-
-    a {
-      color: @ak-tabs-color-label-default;
-      text-decoration: none;
-    }
-  }
-}
-
-.dd-hidden {
+// Dropdown items
+.ak-tab-dd-item-hidden {
   display: none;
 }
