--- a/packages/ak-dropdown/src/shadow-item.less
+++ b/packages/ak-dropdown/src/shadow-item.less
@@ -1,10 +1,8 @@
 @import 'shared-variables.less';
 
-@spacing: 10px;
-
 .flex() {
   display: flex;
-  padding: 0 @spacing;
+  padding: 0 @ak-dropdown-side-space;
   align-items:center;
   box-sizing: border-box;
   flex-wrap: nowrap;
