--- a/packages/ak-dropdown/src/shared-variables.less
+++ b/packages/ak-dropdown/src/shared-variables.less
@@ -18,3 +18,6 @@
 @ak-dropdown-font-heading: @ak-color-N50;
 
 @ak-dropdown-font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+
+@ak-dropdown-side-space: 10px;
+@ak-dropdown-group-space: 10px;
