style: add styling for code blocks.

--- a/packages/ak-editor-toolbar-block-type/src/index.less
+++ b/packages/ak-editor-toolbar-block-type/src/index.less
@@ -43,7 +43,7 @@
     line-height: 20px;
   }
 
-  [block-type-name=monospace] {
-    font-family: monospace;
+  [block-type-name=code] {
+    font-family: Consolas, Menlo, "Liberation Mono", Courier, monospace;
   }
 }
