--- a/packages/ak-button/src/shadow.less
+++ b/packages/ak-button/src/shadow.less
@@ -37,11 +37,11 @@
 // Disabled button Colors
 @disabledColor: @ak-color-N40;
 
-::slotted([slot="before"]) > {
+::slotted([slot="before"]) {
   margin-right: @side-slot-margin;
 }
 
-::slotted([slot="after"]) > {
+::slotted([slot="after"]) {
   margin-left: @side-slot-margin;
 }
 
