refactor(component): clean up after the review
affects: ak-dropdown

--- a/packages/ak-dropdown/src/shadow-group.less
+++ b/packages/ak-dropdown/src/shadow-group.less
@@ -3,16 +3,14 @@
 .group {
   box-sizing: border-box;
   display: block;
-  padding:@ak-dropdown-group-space 0 0 0;
 }
 
 .title {
-  text-transform:uppercase;
-  color:@ak-dropdown-font-heading;
-  padding:0 @ak-dropdown-side-space;
-  margin:0;
-  font-size:13px;
-  line-height:30px;
-  height:30px;
-  font-weight:normal;
+  color: @ak-dropdown-font-heading;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 30px;
+  margin: 0;
+  padding: 0 @ak-dropdown-item-padding;
+  text-transform: uppercase;
 }
