--- a/packages/ak-dropdown/src/shared-variables.less
+++ b/packages/ak-dropdown/src/shared-variables.less
@@ -3,7 +3,10 @@
 @import '~akutil-shared-styles/src/colors.less';
 @import '~akutil-shared-styles/src/fonts.less';
 
-@ak-dropdown-border-radius: 4px;
+@grid: 4;
+@item-spacing: unit(@grid * 2, px);
+
+@ak-dropdown-border-radius: 3px;
 @ak-dropdown-background-main: @ak-color-N700;
 @ak-dropdown-background-active: @ak-color-B50;
 @ak-dropdown-background-selected: @ak-color-N900;
@@ -19,5 +22,11 @@
 
 @ak-dropdown-font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 
-@ak-dropdown-side-space: 10px;
-@ak-dropdown-group-space: 10px;
+@ak-dropdown-item-padding: @item-spacing;
+@ak-dropdown-group-margin: @item-spacing;
+
+.flex() {
+  align-items: center;
+  display: flex;
+  flex-wrap: nowrap;
+}
