style: Make less mixins have brackets
affects: ak-tag, ak-tag-group

--- a/packages/ak-tag-group/src/shadow.less
+++ b/packages/ak-tag-group/src/shadow.less
@@ -14,12 +14,12 @@
 }
 
 :host .slot-wrapper {
-  .flex;
+  .flex();
   width: 100%;
 }
 
 .slot {
-  .flex;
+  .flex();
 }
 
 .rootNode {
@@ -35,5 +35,5 @@
 }
 
 :host([alignment="right"]) .slot-wrapper {
-  .rightAligned;
+  .rightAligned();
 }
