--- a/packages/ak-tag-group/src/shadow.less
+++ b/packages/ak-tag-group/src/shadow.less
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
 }
 
-.rightAligned {
+.endAligned {
   justify-content: flex-end;
 }
 
@@ -34,6 +34,6 @@
   .flex-item();
 }
 
-:host([alignment="right"]) .slot-wrapper {
-  .rightAligned();
+:host([alignment="end"]) .slot-wrapper {
+  .endAligned();
 }
