fix(component): add border radius to container image
affects: ak-navigation

--- a/packages/ak-navigation/src/index.less
+++ b/packages/ak-navigation/src/index.less
@@ -9,6 +9,7 @@
 @global-secondary-item-margin: 10px;
 @global-secondary-item-height: 30px;
 @container-logo-size: 40px;
+@container-logo-border-radius: 3px;
 
 @font-size: 14px;
 
@@ -67,6 +68,7 @@
   .container-logo {
     width: @container-logo-size;
     height: @container-logo-size;
+    border-radius: @container-logo-border-radius;
     margin-right: 10px;
     
     &:not([src]) {
