refactor(component): Added _isFlipped to tooltip
affects: ak-tooltip

--- a/packages/ak-tooltip/src/shadow.less
+++ b/packages/ak-tooltip/src/shadow.less
@@ -19,14 +19,9 @@
 // Putting these styles in host.less with :not([visible]) causes a slight flash when moving the
 // mouse in the direction of the animation. Putting it here makes it work perfectly.
 .hidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
+  top: -9999px;
+  left: -9999px;
+  position: absolute;
 }
 
 .tooltip {
